--- a/AKchatApp/src/app/header/header.component.css
+++ b/AKchatApp/src/app/header/header.component.css
@@ -389,3 +389,19 @@ input[type=checkbox]:checked~.sidebarIconToggle>.diagonal.part-2 {
     right: 0; 
   }
    */
+
+
+   .user-text{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: 600;
+    font-size: large;
+   }
