--- a/AKchatApp/src/app/notification/notification.component.html
+++ b/AKchatApp/src/app/notification/notification.component.html
@@ -1,6 +1,6 @@
 <div class="dialogue-container" style="height: 300px;overflow-y: auto;">
-    <div class="ps-2 pe-2 pt-2 pb-2 text-white "
-        style="border-bottom: 1px solid black;" [ngClass]="service.defaulttheme">Notifications</div>
+    <div class="ps-2 pe-2 pt-2 pb-2 text-white " style="border-bottom: 1px solid black;"
+        [ngClass]="service.defaulttheme">Notifications</div>
 
     <div class="d-flex pt-2 pb-2 ps-2 pe-2 {{'user-'+msg.id}}" *ngFor="let msg of service.notimsgs"
         style="gap: 10px;padding-block: 5px;border-bottom: 1px solid lightgray;">
@@ -8,7 +8,8 @@
         <ng-container *ngIf="msg.status===1">
             <span style="margin-bottom: auto;margin-top: auto;"><img src='/assets/img/mlogo.png'
                     style="width:32px;height:28px;"></span>
-            <div class="d-flex flex-column" (click)="msg.usename && fortoggleprivatechat(msg.usename,msg.msgid)">
+            <div class="d-flex flex-column"
+                (click)="msg.usename && fortoggleprivatechat(msg.usename,msg.msgid,msg.userImage)">
                 <div class="text-black fw-bolder">{{msg.name?.toUpperCase()}}</div>
                 <div class="text-black ">{{msg.content}}</div>
             </div>
@@ -28,7 +29,8 @@
         <ng-container *ngIf="msg.status===3">
             <span style="margin-bottom: auto;margin-top: auto;"><img src='/assets/img/heart.jpg'
                     style="width:32px;height:28px;"></span>
-            <div class="d-flex flex-column" (click)="msg.usename && fortoggleprivatechat(msg.usename,msg.msgid)">
+            <div class="d-flex flex-column"
+                (click)="msg.usename && fortoggleprivatechat(msg.usename,msg.msgid,msg.userImage)">
                 <div class="text-black fw-bolder">{{msg.name?.toUpperCase()}}</div>
                 <div class="text-black">{{msg.content}}</div>
             </div>
@@ -55,8 +57,12 @@
                 <div class="text-black fw-bolder">{{msg.name?.toUpperCase()}}</div>
                 <div class="text-black">{{msg.content}}</div>
                 <div class="d-flex justify-content-center {{'notimessage-'+ msg.id}}" *ngIf="msg.answer===0">
-                    <button class="ms-1 me-1 btn btn-success ps-2 pe-2" style="width: fit-content;height: 25px;padding: 0px;" (click)="msg.usename && AcceptReq(msg.usename,msg.id)">Accept</button>
-                    <button class="ms-1 me-1 btn btn-danger ps-2 pe-2"  style="width: fit-content;height: 25px;padding: 0px;" (click)="msg.usename && RejectReq(msg.usename,msg.id)">Reject</button>
+                    <button class="ms-1 me-1 btn btn-success ps-2 pe-2"
+                        style="width: fit-content;height: 25px;padding: 0px;"
+                        (click)="msg.usename && AcceptReq(msg.usename,msg.id)">Accept</button>
+                    <button class="ms-1 me-1 btn btn-danger ps-2 pe-2"
+                        style="width: fit-content;height: 25px;padding: 0px;"
+                        (click)="msg.usename && RejectReq(msg.usename,msg.id)">Reject</button>
                 </div>
                 <div class="d-flex  text-success justify-content-center" *ngIf="msg.answer===1">
                     <span>You Accept Request</span>
@@ -75,7 +81,7 @@
             <span style="margin-left: auto;margin-bottom: auto;margin-top: auto;" (click)="toggle(msg.id)"><i
                     class="bi bi-x-circle"></i></span>
         </ng-container>
-        
+
         <ng-container *ngIf="msg.status===6">
             <span style="margin-bottom: auto;margin-top: auto;"><img src='/assets/img/accept.png'
                     style="width:32px;height:28px;"></span>
