--- a/AKchatApp/src/app/story/story.component.html
+++ b/AKchatApp/src/app/story/story.component.html
@@ -4,19 +4,34 @@
     <p class="storytitle">Stories</p>
   </div>
   <div class="formaindiv d-flex">
-    <div *ngIf="!isMyNameIncluded" class="position-relative userdiv d-flex align-items-center"style="display: flex;justify-content: space-between;align-items: center;">
+    <div *ngIf="!isMyNameIncluded" class="position-relative userdiv d-flex align-items-center"
+      style="display: flex;justify-content: space-between;align-items: center;">
       <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')"
-      style="position: absolute;right: 7px;top: 70px;overflow: hidden;">
-      <i class="bi bi-plus-circle" style="font-size: xx-large; color: white;background-color: rgb(25, 135, 84);"></i>
-       </button>
-        <button class="d-flex flex-column align-items-center" style="width: -webkit-fill-available;background-color: transparent;border: 0px;">
-          <div class="ms-3 mb-1" style="width: 94%;border-radius: 50%;background-color: white;box-shadow: 9px 0px 15px -2px #625b5b;border: solid lightgrey 4px;">
-            <img style="height: 88px; width: 97%; border-radius: 50%;" [src]="service.imageUrl" alt="" />
-          </div>
-          <p class="mt-1 m-0 ms-2 fw-bolder" *ngIf="!isMyNameIncluded" style="font-size: 16px;">
-            My Story
-          </p>
-        </button>
+        style="position: absolute;right: 7px;top: 70px;overflow: hidden;">
+        <i class="bi bi-plus-circle" style="font-size: xx-large; color: white;background-color: rgb(25, 135, 84);"></i>
+      </button>
+      <button class="d-flex flex-column align-items-center"
+        style="width: -webkit-fill-available;background-color: transparent;border: 0px;">
+        <div class="ms-3 mb-1"
+          style="width: 94%;border-radius: 50%;background-color: white;box-shadow: 9px 0px 15px -2px #625b5b;border: solid lightgrey 4px;">
+
+          <ng-container *ngIf="service.imageUrl;else noofflineuser">
+            <img style=" height: 88px; width: 88px; border-radius: 50%" [src]="service.imageUrl" alt="" />
+          </ng-container>
+
+          <ng-template #noofflineuser>
+            <div class="user-text">{{this.service.myName.charAt(0)}}</div>
+          </ng-template>
+
+
+          <!-- <img style="height: 88px; width: 88px; border-radius: 50%;" [src]="service.imageUrl" alt="" /> -->
+
+
+        </div>
+        <p class="mt-1 m-0 ms-2 fw-bolder" *ngIf="!isMyNameIncluded" style="font-size: 16px;">
+          My Story
+        </p>
+      </button>
     </div>
 
 
@@ -25,15 +40,17 @@
         style="display: flex;justify-content: space-between;align-items: center;">
 
         <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')"
-      style="position: absolute;right: 7px;top: 70px;overflow: hidden;">
-      <i class="bi bi-plus-circle" style="font-size: xx-large; color: white;background-color: rgb(25, 135, 84);"></i>
-       </button>
+          style="position: absolute;right: 7px;top: 70px;overflow: hidden;">
+          <i class="bi bi-plus-circle"
+            style="font-size: xx-large; color: white;background-color: rgb(25, 135, 84);"></i>
+        </button>
         <button class="d-flex flex-column align-items-center" style="
             width: -webkit-fill-available;
             background-color: transparent;
             border: 0px;
           " (click)="bb(story.userid, '300ms', '150ms')">
-          <div class="ms-3 mb-1" style="width: 94%;border-radius: 50%;background-color: white;box-shadow: 9px 0px 15px -2px #625b5b;border: solid red 4px;">
+          <div class="ms-3 mb-1"
+            style="width: 94%;border-radius: 50%;background-color: white;box-shadow: 9px 0px 15px -2px #625b5b;border: solid red 4px;">
             <img style="    height: 88px; width: 97%; border-radius: 50%;"
               [src]="story.userimg ? story.userimg : '/assets/img/profile.png'" alt="" />
           </div>
@@ -55,13 +72,14 @@
 
       </div>
 
-      <div class="d-flex align-items-center nonuserdiv"  *ngIf="story.uploadedUser !== service.myName">
+      <div class="d-flex align-items-center nonuserdiv" *ngIf="story.uploadedUser !== service.myName">
         <button class="d-flex me-2 flex-column align-items-center" style="
             width: -webkit-fill-available;
             background-color: transparent;
             border: 0px;
           " (click)="bb(story.userid, '300ms', '150ms')">
-          <div class="ms-3" style="width: 87%;border-radius: 50%;background-color: white;border: solid rgb(100, 255, 100) 4px;box-shadow: 9px 0px 15px -2px #625b5b;">
+          <div class="ms-3"
+            style="width: 87%;border-radius: 50%;background-color: white;border: solid rgb(100, 255, 100) 4px;box-shadow: 9px 0px 15px -2px #625b5b;">
             <img style="height: 88px;width: 97%;border-radius: 50%;"
               [src]="story.userimg ? story.userimg : '/assets/img/profile.png'" alt="" />
           </div>
@@ -118,9 +136,11 @@
 
 <!-- modal -->
 <div class="story mt-2 verticalbody d-none" style="height: 600px">
-  <div class="stitle" style="display: flex;justify-content: space-around;background-color: rgb(25, 135, 84);position: relative;">
+  <div class="stitle"
+    style="display: flex;justify-content: space-around;background-color: rgb(25, 135, 84);position: relative;">
     <p class="storytitle">Stories</p>
-    <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')" style="position: absolute;right: 17px;">
+    <button class="addstory" type="button" (click)="openDialog('300ms', '150ms')"
+      style="position: absolute;right: 17px;">
       <i class="bi bi-plus-circle" style="font-size: x-large; color: white;"></i>
     </button>
   </div>
@@ -143,8 +163,15 @@
             background-color: white;
             border: solid red 4px;
           ">
-          <img style="height: 33px; width: 33px; border-radius: 50%"
-            [src]="story.userimg ? story.userimg : '/assets/img/profile.png'" alt="" />
+          <ng-container *ngIf="story.userimg;else noofflineuser">
+            <img style="height: 33px; width: 33px; border-radius: 50%"
+              [src]="story.userimg ? story.userimg : '/assets/img/profile.png'" alt="" />
+          </ng-container>
+
+          <ng-template #noofflineuser>
+            <div class="user-text me-2">{{this.service.myName.charAt(0)}}</div>
+          </ng-template>
+
         </div>
         <p class="m-0 ms-2" *ngIf="story.uploadedUser == service.myName">
           My Story
