commit for session storage

--- a/AKchatApp/src/app/chat/chat-input-general/chat-input-general.component.html
+++ b/AKchatApp/src/app/chat/chat-input-general/chat-input-general.component.html
@@ -1,7 +1,7 @@
 <!-- <form #messageForm="ngForm"  autocomplete="off"> -->
     <div class="d-flex" style="position: absolute;top: 77%;width: 100%;">
         <div class="mx-3" style="width: 80%;">
-            <input  type="text" id="mTexts" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message">
+            <input  type="text" id="mTexts" [(ngModel)]="content" required name="content"  class="form-control" placeholder="Caption">
         </div>
         <div style="width: 20%;">
                 <button style="width:81%" class="btn btn-primary" type="submit" (click)="sendMessage()">Post</button>
