--- a/AKchatApp/src/app/chat/messages/messages.component.html
+++ b/AKchatApp/src/app/chat/messages/messages.component.html
@@ -37,7 +37,7 @@
                             [class.colorheart]="msgservice.messageDiv1Visibility[messageId+1]"></i>
                         <i *ngIf="message.likename===service.myName" class="bi bi-suit-heart-fill colorheart samelike"
                             [class.colorheart]="!msgservice.messageDiv1Visibility[messageId+1]"></i>
-                        like
+                        like 
                     </span>
                     <span style="text-align: left;" *ngIf="message.messageLike===0"
                         (click)="LikeMsg(message.messageid,messageId+1,messageId+1)"><i
@@ -103,7 +103,7 @@
                             class="bi bi-suit-heart-fill nolike"
                             [class.colorheart]="msgservice.messageDiv1Visibility[messageId+1]"></i>like</span>
 
-                    <span (click)="closediv(messageId+1)"><i class="bi bi-x-lg me-1"></i>Close</span>
+                    <span style="text-align: left;" (click)="closediv(messageId+1)"><i class="bi bi-x-lg me-1"></i>Close</span>
                 </div>
                 <!-- DIV FOR MINE FOR OPTIONS -->
 
