--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <div class="row d-flex justify-content-center main-body mt-5 mb-5">
     <div class="col-12 col-md-8">
-        <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
+        <!-- <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
 
 
 
@@ -24,9 +24,10 @@
                                 <label>Name</label>
                                 <mat-form-field appearance="outline">
                                     <mat-label>Name</mat-label>
-                                    <input matInput formControlName="name">
+                                    <input matInput formControlName="name" (focusout)="validateNamepro($event)">
                                 </mat-form-field>
                             </mat-card-content>
+
                             <mat-card-content class="d-flex flex-column half-size">
                                 <label>Email</label>
                                 <mat-form-field appearance="outline">
@@ -35,7 +36,9 @@
                                 </mat-form-field>
                             </mat-card-content>
                         </div>
-
+                        <span class="text-danger" *ngIf="empForm.get('name')?.invalid">
+                            {{ empForm.get('name')?.errors?.['message'] }}
+                        </span>
 
                         <div class="div1 d-flex justify-content-between">
                             <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size">
@@ -67,7 +70,7 @@
 
 
                     </mat-card>
-                    <button class="ms-4" mat-button matStepperNext style="background-color: #b4b4ff">next <i
+                    <button class="ms-4" mat-button matStepperNext style="background-color: #b4b4ff" [disabled]="nameError">next <i
                             class="bi bi-caret-right"></i></button>
                 </mat-step>
 
@@ -145,11 +148,11 @@
 
                 </mat-step>
             </mat-horizontal-stepper>
-        </form>
+        </form> -->
 
 
 
-        <!-- <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
+        <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
             <mat-card>
 
                 <div class="d-flex justify-content-center mb-5">
@@ -162,23 +165,40 @@
                     </div>
                 </div>
                 <div class="div1 d-flex justify-content-between">
-                    <mat-card-content class="d-flex flex-column half-size">
-                        <label>Name</label>
-                        <mat-form-field appearance="outline">
-                            <mat-label>Name</mat-label>
-                            <input matInput formControlName="name">
-                        </mat-form-field>
+                    <mat-card-content class="d-flex flex-column half-size  content-with-border position-relative">
+                        <div class="d-flex align-items-center">
+                            <label style="margin-right:10px">Name:</label>
+                            <input class="custom-input" formControlName="name" (focusout)="validateNamepro($event)">
+
+                        </div>
+                        <span *ngIf="empForm.get('name')?.hasError('required')"
+                            style="margin-left: 24px;top: 105%;left: -4%;" class="text-danger position-absolute">Name is
+                            required</span>
+                        <span *ngIf="empForm.get('name')?.invalid" style="margin-left: 24px;top: 105%;left: -4%;"
+                            class="text-danger position-absolute">{{ empForm.get('name')?.errors?.['message'] }}</span>
                     </mat-card-content>
-                    <mat-card-content class="d-flex flex-column half-size">
-                        <label>Email</label>
-                        <mat-form-field appearance="outline">
+
+                    <mat-card-content class="d-flex flex-column half-size  content-with-border position-relative">
+                        <div class="d-flex align-items-center">
+                            <label style="margin-right:10px">Email:</label>
+                            <input class="custom-input" formControlName="email">
+                        </div>
+                        <!-- <label>Email</label>
+                        <mat-form-field>
                             <mat-label>Email</mat-label>
                             <input matInput formControlName="email">
-                        </mat-form-field>
+                        </mat-form-field> -->
+                        <span *ngIf="empForm.get('email')?.hasError('required')" style="top: 104%;left: 1%;"
+                            class="text-danger position-absolute">Email is required</span>
+
                     </mat-card-content>
+
                 </div>
-                <div class="div1 d-flex justify-content-between">
-                    <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size">
+                <!-- <span class="text-danger" style="margin-left:24px">
+                    {{ empForm.get('name')?.errors?.['message'] }}
+                </span> -->
+                <div class="div1 d-flex justify-content-between mt-2">
+                    <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size position-relative">
                         <div class="d-flex">
                             <label>Gender :</label>
                             <mat-radio-group class="mb-2" formControlName="gender">
@@ -187,8 +207,12 @@
                                 <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
                             </mat-radio-group>
                         </div>
+
+                        <span *ngIf="empForm.get('gender')?.hasError('required')"
+                            style="text-align: end;margin-right: 20px;" class="text-danger position-absolute">Gender is
+                            required</span>
                     </mat-card-content>
-                    <mat-card-content class="d-flex flex-column content-with-border half-size">
+                    <mat-card-content class="d-flex flex-column content-with-border half-size position-relative">
                         <div class="d-flex">
                             <label>Status :</label>
                             <mat-radio-group class="mb-2" formControlName="status">
@@ -199,25 +223,45 @@
                                 </mat-radio-button>
                             </mat-radio-group>
                         </div>
+                        <span *ngIf="empForm.get('status')?.hasError('required')"
+                            style="text-align: end;margin-right: 20px;" class="text-danger position-absolute">Status is
+                            required</span>
+
                     </mat-card-content>
                 </div>
                 <div class="div1 d-flex justify-content-between">
-                    <mat-card-content class="d-flex flex-column half-size">
-                        <label>Phone Number</label>
+                    <mat-card-content class="d-flex flex-column half-size content-with-border position-relative">
+                        <div class="d-flex align-items-center">
+                            <label style="margin-right:10px">PhoneNumber:</label>
+                            <input class="custom-input" formControlName="phonenumber">
+
+                        </div>
+                        <!-- <label>Phone Number</label>
                         <mat-form-field appearance="outline">
                             <mat-label>Phone Number</mat-label>
                             <input matInput formControlName="phonenumber">
+                        </mat-form-field> -->
+                        <span *ngIf="empForm.get('phonenumber')?.hasError('required')"
+                            style="margin-left: 24px;top: 105%;left: -4%;"
+                            class="text-danger position-absolute">PhoneNumber is required</span>
+
+                    </mat-card-content>
+                    <mat-card-content style="    padding-left: 15px;padding-top: 0px;padding-bottom: 7px;" class="d-flex flex-column half-size content-with-border position-relative">
+                        <mat-form-field >
+                            <div>
+                                <label>Choose Your Birth date :</label>
+                                <input matInput [matDatepicker]="picker" formControlName="dob">
+                            </div>
+                            <mat-hint>MM/DD/YYYY</mat-hint>
+                            <mat-datepicker-toggle class="date-toggle" matIconSuffix
+                                [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker></mat-datepicker>
+                            <span *ngIf="empForm.get('dob')?.hasError('required')"
+                                style="margin-left: 24px;top: 105%;left: -4%;" class="text-danger position-absolute">Dob
+                                is required</span>
+
                         </mat-form-field>
                     </mat-card-content>
-                    <mat-form-field class="date half-size">
-                        <div>
-                            <label>Choose Your Birth date :</label>
-                            <input matInput [matDatepicker]="picker" formControlName="dob">
-                        </div>
-                        <mat-hint>MM/DD/YYYY</mat-hint>
-                        <mat-datepicker-toggle class="date-toggle" matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
                 </div>
                 <mat-card-content class="d-flex flex-column">
                     <label>About me</label>
@@ -228,11 +272,12 @@
                     </mat-form-field>
                 </mat-card-content>
                 <mat-card-content class="d-flex justify-content-center">
-                    <button mat-raised-button color="primary" class="w-50" type="submit">Save</button>
+                    <button mat-raised-button color="primary" class="w-50" type="submit"
+                        [disabled]="nameError">Save</button>
                 </mat-card-content>
                 <mat-card-footer></mat-card-footer>
             </mat-card>
-        </form> -->
+        </form>
     </div>
 </div>
 
