--- a/AKchatApp/src/app/story-upload/story-upload.component.html
+++ b/AKchatApp/src/app/story-upload/story-upload.component.html
@@ -3,13 +3,20 @@
         <span class="fw-bolder">Post your story</span>
     </div>
     <div class="d-flex flex-column" *ngIf="!isslider"
-        style="width: 60%;position: absolute;margin-top: 45%;margin-left: 22%;">
-        <img style="height: 127px;" src='/assets/img/imagevidelogo.jpg'>
+        style="width: 60%;position: absolute;margin-top: 45%;margin-left: 22%;align-items: center;">
+
+        <div (dragover)="onDragOver($event)" (drop)="onDrop($event)" class="dropzone mb-3">
+            <img style="height: 127px;" src='/assets/img/imagevidelogo.jpg'>
+        </div>
+
         <button class="btn btn-primary" style="width: 60%; margin-inline: auto;" (click)="selectimage()">Select from
             Computer</button>
         <input #fileInput class="image-input" type="file" multiple (change)="detectFiles($event)"
             style="display: none;">
     </div>
+
+
+
     <div class="slider" *ngIf="isslider">
         <div *ngIf="isbutton">
             <div (click)="goToPrevious()" id="restartButton" class="leftArrow">
@@ -19,8 +26,6 @@
                 <span>❱</span>
             </div>
         </div>
-
-
 
 
 
@@ -36,10 +41,7 @@
         </div>
     </div>
     <div *ngIf="isslider">
-        <div style="display: flex;position: absolute;top: 71%;">
-            <div>
-                <h3 style="margin-left: 19px;font-size: 24px;">Caption :</h3>
-            </div>
+        <div style="display: flex;position: absolute;top: 71%;right:10%">
             <div style="position:absolute;left:474%" (click)="selectimage()">
                 <img src="/assets/img/upload.png" style="width:30px;height: 30px;">
             </div>
